App3 starts, all controllers loading into app3 panes correctly.